<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Profile image as background -->
        <ImageView
            android:id="@+id/profilePictureMain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/heisenberg"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/opaqueBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:alpha="0.6"
            android:scaleType="centerCrop"/>

        <!-- Contact Name -->
        <TextView
            android:id="@+id/contactNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/contactNameTxt"
            android:textSize="36dp"
            android:textColor="@color/white"/>

        <!-- Contact Company -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactNameTxt"
            android:layout_centerHorizontal="true"
            android:text="@string/businessNameTxt"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/emailIcon"
            android:layout_marginBottom="14dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="64dp"
            android:src="@drawable/phone_icon"/>

        <TextView
            android:id="@+id/phoneNumberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/emailTxt"
            android:layout_marginBottom="6dp"
            android:layout_toRightOf="@id/phoneIcon"
            android:layout_marginLeft="12dp"
            android:text="@string/phoneNumberTxt"
            android:textColor="@color/white"
            android:textSize="18dp"/>

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_above="@id/addressTxt"
            android:layout_marginLeft="64dp"
            android:src="@drawable/email_icon"/>

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_toRightOf="@id/emailIcon"
            android:layout_centerVertical="true"
            android:layout_above="@id/addressTxt"
            android:layout_marginLeft="12dp"
            android:text="@string/emailTxt"
            android:textColor="@color/white"
            android:textSize="18dp"/>

        <ImageView
            android:id="@+id/addressIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:layout_marginLeft="64dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/address_icon"/>

        <TextView
            android:id="@+id/addressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/addressIcon"
            android:layout_alignParentBottom="true"
            android:text="@string/addressTxt"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>